jwt correccion de errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=pruebas;
+spring.datasource.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=JtwPruebas;
 spring.datasource.username=sa
 spring.datasource.password=bmore21
 spring.jpa.hibernate.ddl-auto=update
